apps/my-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: moja-aplikacja-svc
  namespace: default
spec:
  type: ClusterIP # Na razie wystarczy dostęp wewnętrzny
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: web
