apps/my-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: moja-aplikacja-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx
    # Ta linia pomaga w niektórych wersjach Argo / Docker Desktop wymusić status gotowości:
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  rules:
  - host: moja-aplikacja.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: moja-aplikacja-svc
            port:
              number: 80
